--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,3 @@
 local_source.loop3d
-2024-11-26-12-38/map2model_data/fault-fault-intersection.txt
-2024-11-26-12-38/map2model_data/faults_wkt.csv
-2024-11-26-12-38/map2model_data/geology_wkt.csv
-2024-11-26-12-38/map2model_data/graph_all_None.gml
-2024-11-26-12-38/map2model_data/graph_all_None.gml.txt
-2024-11-26-12-38/map2model_data/graph_fault_None.gml
-2024-11-26-12-38/map2model_data/graph_fault_None.gml.txt
-2024-11-26-12-38/map2model_data/graph_igneous_None.gml
-2024-11-26-12-38/map2model_data/graph_igneous_None.gml.txt
-2024-11-26-12-38/map2model_data/graph_partial.gml
-2024-11-26-12-38/map2model_data/graph_partial.gml.txt
-2024-11-26-12-38/map2model_data/graph_strat_None.gml
-2024-11-26-12-38/map2model_data/graph_strat_None.gml.txt
-2024-11-26-12-38/map2model_data/point-polygon-intersection.txt
-2024-11-26-12-38/map2model_data/polygons_clipped_with_faults.svg
-2024-11-26-12-38/map2model_data/polygons_clipped_with_points.svg
-2024-11-26-12-38/map2model_data/polygons_clipped.svg
-2024-11-26-12-38/map2model_data/polygons_read_with_faults.svg
-2024-11-26-12-38/map2model_data/polygons_read_with_points.svg
-2024-11-26-12-38/map2model_data/polygons_read.svg
-2024-11-26-12-38/map2model_data/polygons_with_all_contacts.svg
-2024-11-26-12-38/map2model_data/polygons_with_fault_contacts.svg
-2024-11-26-12-38/map2model_data/polygons_with_stratigraphic_contacts.svg
-2024-11-26-12-38/map2model_data/unit-fault-intersection.txt
-2024-11-26-12-38/map2model_data/units_contacts_absolute_lengths.txt
-2024-11-26-12-38/map2model_data/units_contacts_relative_lengths.txt
-2024-11-26-12-38/map2model_data/units_sorted.txt
+2024-11-26-12-38/map2model_data/*
+
